# pymss-desktop

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release-cuda.yml  release-macos.yml  release-windows.yml  release.yml
installer/: pymss-studio.iss
python/: requirements.txt  worker.py  worker_download.py  worker_models.py
scripts/: prepare-macos-bundled-tools.sh  prepare-python-runtime.ps1  prepare-python-runtime.sh  prune-python-runtime.ps1  prune-python-runtime.sh  resign-macos-app.sh  sync-build-version.ps1
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs  model_dir_migration.rs  state.rs  storage.rs
src-tauri/src/commands/: app_cmd.rs  mod.rs
src-tauri/src/python/: mod.rs  protocol.rs  worker.rs
src/components/: AppBrandMark.vue  DropZone.vue  SideNav.vue  StartupOnboarding.vue  TitleBar.vue
src/composables/: useEditorAssetDrag.ts  useEditorAssets.ts  useEditorExport.ts  useEditorLayout.ts  useEditorMixerView.ts  useEditorPlayback.ts  useEditorProjectBridge.ts  useEditorShortcuts.ts
src/i18n/: en.json  index.ts  zh-CN.json
src/router/: index.ts
src/stores/: app.ts  editor.ts  editorPlayback.ts  model.ts  settings.ts  task.ts  toast.ts
src/styles/: global.scss
src/types/: editor.ts
src/utils/: appStore.ts  editorTime.ts  events.ts  format.ts  theme.ts
src/views/: EditorView.vue  HomeView.vue  ModelsView.vue  (+4 more)
(+8 files in other folders)
