[package]
name = "pymss-studio"
version = "0.0.1"
edition = "2021"
authors = ["TheSmallHanCat"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
trash = "5"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
